--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "npm": "^9.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.0.5",
@@ -45,5 +47,3 @@
     "redux-devtools": "3.7.0"
   }
 }
-
-
